<resources>
    <string name="app_name">MonsterBook</string>
    <string name="e_mail">E-mail</string>
    <string name="todo">TODO</string>
    <string name="sign_in">SIGN IN</string>
    <string name="login">login</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="username">Username</string>
    <string name="back">back</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="monster">monster_logo</string>
    <string name="skip">SKIP</string>
    <string name="start">START</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">home</string>
    <string name="title_home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="library">Library</string>
    <string name="account_settings">Hesap Ayarları</string>
    <string name="share">Paylaş</string>
    <string name="log_out">Çıkış Yap</string>
    <string name="change_password">Şifre değiştir</string>
    <string name="mail_change">E-posta değiştir</string>
    <string name="username_change">Kullanıcı adı değiştir</string>
</resources>