<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#201d1d"
    tools:context=".signIn.SignInFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/back"
            android:src="@drawable/back" />

        <EditText
            android:id="@+id/name_text"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@id/back_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:autofillHints="name"
            android:background="@drawable/edit_text_background"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text_color" />

        <EditText
            android:id="@+id/surname_text"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@id/name_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:autofillHints="surname"
            android:background="@drawable/edit_text_background"
            android:hint="@string/surname"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text_color" />

        <EditText
            android:id="@+id/email_text"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@id/surname_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edit_text_background"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text_color" />

        <EditText
            android:id="@+id/username_text"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@id/email_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:autofillHints="username"
            android:background="@drawable/edit_text_background"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text_color" />

        <EditText
            android:id="@+id/password_text"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@id/username_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:background="@drawable/edit_text_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text_color" />

        <EditText
            android:id="@+id/repeat_password_text"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@id/password_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:background="@drawable/edit_text_background"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text_color" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/repeat_password_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/sign_in_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:background="@drawable/btn"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/sign_in_btn"
                android:src="@drawable/back2" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>