<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#201d1d"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:contentDescription="@string/monster"
            android:src="@drawable/image" />

        <EditText
            android:id="@+id/email_text"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edit_text_background"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text_color" />

        <EditText
            android:id="@+id/password_text"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@id/email_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:background="@drawable/edit_text_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text_color" />
        <RelativeLayout
            android:id="@+id/one_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn"
                android:text="@string/login"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/login_btn"
                android:src="@drawable/back2" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/two_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/one_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@id/sign_in_btn"
                android:src="@drawable/back2" />

            <Button
                android:id="@+id/sign_in_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:background="@drawable/btn"/>

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>