<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#201d1d">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/skip_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/btn"
            android:text="@string/skip"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/balloon"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_below="@+id/skip_btn"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/balloon" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_below="@+id/balloon"
            android:layout_centerInParent="true"
            android:layout_marginTop="-70dp"
            android:contentDescription="@string/monster"
            android:src="@drawable/image" />

        <ImageView
            android:id="@+id/image_skip"
            android:layout_width="300dp"
            android:layout_height="500dp"
            android:layout_below="@id/logo"
            android:layout_centerInParent="true"
            android:layout_marginTop="-250dp"
            android:src="@drawable/skip" />

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_skip"
            android:layout_centerInParent="true"
            android:layout_marginTop="-190dp"
            android:background="@drawable/btn"
            android:text="@string/start"
            android:textColor="@color/black" />

    </RelativeLayout>

</ScrollView>