<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#201d1d"
    tools:context=".ui.accountSettings.AccountSettingsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/back"
            android:src="@drawable/back" />

        <RelativeLayout
            android:id="@+id/profile_box"
            android:layout_width="265dp"
            android:layout_height="265dp"
            android:layout_below="@+id/back_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@color/red" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/change_password_box"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/profile_box"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/change_password_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn"
                android:text="@string/change_password"
                android:textColor="@color/black"/>
            <ImageView
                android:id="@+id/change_password_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/change_password_btn"
                android:src="@drawable/back2"/>



        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/mail_change_box"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@id/change_password_box"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/mail_change_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn"
                android:text="@string/mail_change"
                android:textColor="@color/black"/>
            <ImageView
                android:id="@+id/mail_change_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/mail_change_btn"
                android:src="@drawable/back2"/>



        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/username_change_box"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@id/mail_change_box"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/username_change_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn"
                android:text="@string/username_change"
                android:textColor="@color/black"/>
            <ImageView
                android:id="@+id/username_change_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/username_change_btn"
                android:src="@drawable/back2"/>



        </RelativeLayout>
    </RelativeLayout>

</ScrollView>